--- a/app/src/main/res/layout/content_main_drawer.xml
+++ b/app/src/main/res/layout/content_main_drawer.xml
@@ -11,17 +11,17 @@
 
 
     <FrameLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/frame_layout">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/frame_layout_drawer">
 
         <android.support.v4.view.ViewPager
             android:id="@+id/vp_pages"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         </android.support.v4.view.ViewPager>
-    />
-</FrameLayout>
+        />
+    </FrameLayout>
 
 
 </RelativeLayout>
