--- a/app/src/main/res/layout/login_page.xml
+++ b/app/src/main/res/layout/login_page.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,18 +11,18 @@
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_gravity="center"
-      android:layout_marginTop="70dp"
+      android:layout_marginTop="0dp"
      >
     <ImageView
-        android:layout_width="160dp"
-        android:layout_height="130dp"
+        android:layout_width="250dp"
+        android:layout_height="190dp"
         android:src="@drawable/logo"
         android:layout_gravity="center"
       />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="59dp"
+        android:layout_marginRight="70dp"
         android:textAlignment="center">
 
         <TextView
@@ -30,18 +30,19 @@
             android:layout_height="wrap_content"
             android:text="Username :"
             android:textAlignment="center"
-            android:textSize="12dp"
+            android:textSize="15dp"
             android:textColor="#11093f"
             />
         <EditText
             android:layout_marginLeft="8dp"
-            android:layout_width="135dp"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:hint="Username"
-            android:textSize="11dp"
+            android:textSize="14dp"
             android:textColorHint="@color/HintColor"
-            android:padding="7dp"
+            android:padding="10dp"
             android:background="@drawable/editext_style"
+            android:lines="1"
             />
 
     </LinearLayout>
@@ -58,29 +59,33 @@
             android:layout_height="wrap_content"
             android:text="Password  :"
             android:textAlignment="center"
-            android:textSize="12dp"
+            android:textSize="15dp"
             android:textColor="#11093f"            />
         <EditText
             android:layout_marginLeft="8dp"
-            android:layout_width="135dp"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:hint="Password"
-            android:textSize="11dp"
+            android:textSize="14dp"
             android:textColorHint="@color/HintColor"
-            android:padding="7dp"
+            android:padding="10dp"
             android:background="@drawable/editext_style"
+            android:inputType="textPassword"
+            android:lines="1"
             />
 
     </LinearLayout>
 
       <Button
-          android:layout_width="130dp"
-          android:layout_height="33dp"
-          android:layout_marginTop="20dp"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="30dp"
           android:layout_gravity="center"
           android:text="SUBMIT"
+          android:paddingLeft="30dp"
+          android:paddingRight="30dp"
           android:textColor="#ffffff"
-          android:textSize="12dp"
+          android:textSize="14dp"
           android:layout_marginRight="-6dp"
           android:background="@drawable/submit_button"
       />
@@ -95,7 +100,7 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Don't have an account yet?"
-              android:textSize="12dp"
+              android:textSize="15dp"
               android:textColor="#11093f"
               android:layout_gravity="center"
               android:layout_marginLeft="40dp"
@@ -110,7 +115,7 @@
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="5dp"
                   android:layout_marginTop="2dp"
-                  android:textSize="12dp"
+                  android:textSize="15dp"
                   android:text="Sign Up"
                   android:textColor="#c10c21"
                   android:id="@+id/textView_signup"
@@ -139,4 +144,4 @@
 
 
 
-</LinearLayout>
+</ScrollView>
